--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "file-loader": "^0.9.0",
     "filereader": "^0.10.3",
+    "line-by-line": "^0.1.5",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.4.1",
