--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-typist": "^1.0.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "typo-js": "^1.0.3",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
